fix: update the logic behind grid removing array of arrays to simple for

--- a/etch-a-sketch/styles.css
+++ b/etch-a-sketch/styles.css
@@ -60,12 +60,11 @@ section {
 }
 
 #game-screen {
+    max-height: 70vh;
+    max-width: 70vw;;
     height: 70vh;
     border: 1px solid blue;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
+    display: grid;
 }
 
 .row {
